--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="NTP Server"> 
+    <meta property="og:description" content="Free NTP Server" > 
+    <meta property="og:image" content="https://time.itdata.ge/Time-Zones.256.png"> 
+    <meta property="og:url"content="https://time.itdata.ge"> 
     <title>NTP Server</title>
 </head>
 <body>
