--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta property="og:title" content="NTP Server"> 
     <meta property="og:description" content="Free NTP Server" > 
     <meta property="og:image" content="https://time.itdata.ge/Time-Zones.256.png"> 
-    <meta property="og:url"content="https://time.itdata.ge"> 
+    <meta property="og:url"content="https://time.itdata.ge">
+    <link rel="icon" type="image/x-icon" href="ico-Time-Zones.16.ico">
     <title>NTP Server</title>
 </head>
 <body>
