--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>NTP Time Server</h1>
-    <p id="time">Fetching time...</p>
+    <p id="time">Fetching Time</p>
     <script>
         async function fetchNTPTime() {
             // Simulate getting the time from a server
