--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div>
         <h1>NTP Time Server</h1>
         <p id="time">Fetching time...</p>
     </div>
