--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div>
-        <h1>NTP Server</h1>
+        <h1>NTP Time Server</h1>
         <p id="time">Fetching time...</p>
     </div>
     <script>
