--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
             text-align: center;
             }
             
-        h1{
+        h1, #status{
             color: rgb(69, 3, 131); 
             }
 
         #time {
             color: rgb(21, 188, 21);
             }
+        .green-light {
+            width: 10px;
+            height: 10px;
+            background-color: rgb(5, 183, 5);
+            border-radius: 50%;
+            display: inline-block;
+            margin-top: 10px;
+        }
             
     </style>
 </head>
@@ -31,6 +39,10 @@
     <div>
         <h1>NTP Time Server</h1>
         <p id="time">Fetching time...</p>
+    </div>
+     <div >
+        <span id="status">Status:</span>
+        <div class="green-light"></div>
     </div>
     <script>
         async function fetchNTPTime() {
