--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>NTP Server</title>
         <style>
         body{
+            font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
             margin-top: 20%;
@@ -41,7 +42,7 @@
         <p id="time">Fetching time...</p>
     </div>
      <div >
-        <span id="status">Status:</span>
+        <span id="status"> TIME.ITDATA.GE Status:</span>
         <div class="green-light"></div>
     </div>
     <script>
