--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             padding: 2px 10px;
-            width: 100%;
+            width: 80%;
             height: 25px; 
             font-size: 14px;
         }
@@ -72,7 +72,7 @@
         <h1>NTP Time Server</h1>
         <div>
             <select id="country-selector">
-                <option value="UTC">Select a Country (Default: UTC)</option>
+                <option value="UTC">Select a Country</option>
             </select>
         </div>
         <p id="time">Fetching time...</p>
